--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,25 @@
   <groupId>com.jenkins.convertisseur</groupId>
   <artifactId>ConvertisseurProject</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
+
+  <reporting>
+	<plugins>
+	<!-- lancer avec mvn site -->
+		<plugin>
+			<groupId>org.codehaus.mojo</groupId>		
+			<artifactId>jdepend-maven-plugin</artifactId>		
+			<version>2.0</version>	
+		</plugin>		
+	</plugins>
+
+	</reporting>
 </project>
