--- a/pom.xml
+++ b/pom.xml
@@ -2,16 +2,55 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.jenkins.convertisseur</groupId>
   <artifactId>ConvertisseurProject</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1</version>
+
+	<properties>
+	
+	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	
+	</properties>
+	<build>
+	
+	
+	<plugins>
+	
+	
+	<plugin>
+		<groupId>org.apache.maven.plugins</groupId>	
+		<artifactId>maven-pmd-plugin</artifactId>
+		<version>3.7</version>
+		<!-- <configuration> <rulesets> <ruleset>/rulesets/java/braces.xml</ruleset><ruleset>/rulesets/java/naming.xml</ruleset> </rulesets> </configuration> -->
+	</plugin>
+	<plugin>
+		<artifactId>maven-compiler-plugin</artifactId>		
+		<version>3.5.1</version>
+		<configuration>
+			<source>1.8</source>
+			<target>1.8</target>
+		</configuration>
+	</plugin>
+	<plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-surefire-plugin</artifactId>
+		<version>3.0.0-M4</version>
+	</plugin>
+
+	<plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-site-plugin</artifactId>
+		<version>3.7.1</version>
+	</plugin>
+	</plugins>
+  </build>
   
-	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
+  <dependencies>
+	<dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>4.12</version>
+		<scope>test</scope>
+	</dependency>
+  </dependencies>
 
   <reporting>
 	<plugins>
